# whitemaleo

./: .prettierignore  README.md  eslint.config.js  package.json  svelte.config.js  tailwind.config.js  vite.config.js
src/: app.css  app.html  vitest-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/: requestLogic.test.ts  requestLogic.ts
src/routes/: +layout.svelte  +page.svelte  +page.test.ts  MockEditor.svelte
